--- a/Domain/Domain/Domain.csproj
+++ b/Domain/Domain/Domain.csproj
@@ -42,16 +42,16 @@
   <ItemGroup>
     <Compile Include="Address.cs" />
     <Compile Include="Cart.cs" />
-    <Compile Include="CartEntry.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerNotification.cs" />
     <Compile Include="Delivery.cs" />
     <Compile Include="Invoice.cs" />
+    <Compile Include="NotificationState.cs" />
     <Compile Include="Order.cs" />
-    <Compile Include="OrderItem.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductCategory.cs" />
-    <Compile Include="ProductReview.cs" />
+    <Compile Include="ProductItem.cs" />
+    <Compile Include="ProductRatings.cs" />
     <Compile Include="Supplier.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Warehouse.cs" />
