--- a/Database/Database/Database.csproj
+++ b/Database/Database/Database.csproj
@@ -62,6 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Broker\Broker.cs" />
+    <Compile Include="Broker\IBroker.cs" />
+    <Compile Include="ConnectionManager.cs" />
     <Compile Include="DapperConfiguration.cs" />
     <Compile Include="Mapper\AddressMapper.cs" />
     <Compile Include="Mapper\CartEntryMapper.cs" />
