--- a/TempTestApplication/TempTestApplication/packages.config
+++ b/TempTestApplication/TempTestApplication/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Dapper" version="1.42" targetFramework="net461" />
   <package id="Dapper.FluentMap" version="1.4.1" targetFramework="net461" />
+  <package id="Dapper.FluentMap.Dommel" version="1.2.1" targetFramework="net461" />
+  <package id="Dommel" version="1.4.2" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net461" />
 </packages>
