--- a/Domain/Domain/Domain.csproj
+++ b/Domain/Domain/Domain.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerNotification.cs" />
     <Compile Include="Delivery.cs" />
-    <Compile Include="IID.cs" />
+    <Compile Include="IId.cs" />
     <Compile Include="Invoice.cs" />
     <Compile Include="Order.cs" />
     <Compile Include="OrderItem.cs" />
