--- a/Service/Service/Service.csproj
+++ b/Service/Service/Service.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CRUDService.cs" />
+    <Compile Include="ProductSearch.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
