--- a/ManagerApplication/ManagerApplication/ManagerApplication.csproj
+++ b/ManagerApplication/ManagerApplication/ManagerApplication.csproj
@@ -134,6 +134,10 @@
       <Project>{bf54b17e-dc37-4bfe-aa0c-42a7acb9e87f}</Project>
       <Name>Service</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\XML\XML\XML.csproj">
+      <Project>{3fc63860-4725-415d-a439-f72938892cd5}</Project>
+      <Name>XML</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
