--- a/TempTestApplication/TempTestApplication/packages.config
+++ b/TempTestApplication/TempTestApplication/packages.config
@@ -5,4 +5,6 @@
   <package id="Dapper.FluentMap.Dommel" version="1.2.1" targetFramework="net461" />
   <package id="Dommel" version="1.4.2" targetFramework="net461" />
   <package id="MySql.Data" version="6.9.8" targetFramework="net461" />
+  <package id="PostSharp" version="4.2.26" targetFramework="net461" />
+  <package id="PostSharp.Patterns.Diagnostics" version="4.2.26" targetFramework="net461" />
 </packages>
