--- a/ManagerApplication/ManagerApplication/ManagerApplication.csproj
+++ b/ManagerApplication/ManagerApplication/ManagerApplication.csproj
@@ -67,10 +67,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Converter\CategoryIdToNameConverter.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ManageCategoriesUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ManageProductsUI.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -85,6 +90,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ManageCategoriesUI.xaml.cs">
+      <DependentUpon>ManageCategoriesUI.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ManageProductsUI.xaml.cs">
       <DependentUpon>ManageProductsUI.xaml</DependentUpon>
     </Compile>
