--- a/ViewModel/ViewModel/ViewModel.csproj
+++ b/ViewModel/ViewModel/ViewModel.csproj
@@ -30,8 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,7 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GetAllProjects.cs" />
+    <Compile Include="Commands\ReloadProductCategoriesFromDb.cs" />
+    <Compile Include="Commands\UpdateProductCategoriesInDb.cs" />
+    <Compile Include="ProductCategories.cs" />
+    <Compile Include="ProductCategory.cs" />
+    <Compile Include="Commands\ExportProductsAsXml.cs" />
+    <Compile Include="Commands\ImportProductsAsXml.cs" />
+    <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="Commands\ReloadProductsFromDb.cs" />
+    <Compile Include="Commands\SaveProductToDb.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -54,6 +64,10 @@
     <ProjectReference Include="..\..\Service\Service\Service.csproj">
       <Project>{bf54b17e-dc37-4bfe-aa0c-42a7acb9e87f}</Project>
       <Name>Service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\XML\XML\XML.csproj">
+      <Project>{3fc63860-4725-415d-a439-f72938892cd5}</Project>
+      <Name>XML</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
