--- a/Database/Database/app.config
+++ b/Database/Database/app.config
@@ -17,6 +17,7 @@
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>dbsrv.infeo.at</string>
             <string>localhost</string>
           </ArrayOfString>
         </value>
@@ -26,6 +27,7 @@
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>fhv</string>
+            <string>fhv</string>
           </ArrayOfString>
         </value>
       </setting>
@@ -34,6 +36,7 @@
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
             <string>datenmanagement</string>
+            <string>datenmanagement</string>
           </ArrayOfString>
         </value>
       </setting>
@@ -41,6 +44,7 @@
         <value>
           <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
             xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>fhv</string>
             <string>net_db_local</string>
           </ArrayOfString>
         </value>
